test/tests/errors/error-ref-no-func.sm
// true
// false
/**/
/**/

program {
    func x(y) {
        y
    }

    var z = ref x;
}